--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="header-1">
 
-        <a href="#" class="logo"> <i class="fas fa-book"></i> bookly </a>
+        <a href="#" class="logo"> <i class="fas fa-book"></i> ShiVaish Books </a>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
@@ -578,8 +578,8 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/pic-1.png" alt="">
-                <h3>john deo</h3>
+                <img src="image/me-3.jpg" alt="">
+                <h3>Shivprasad</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -591,7 +591,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-2.png" alt="">
+                <img src="image/me.jpg" alt="">
                 <h3>john deo</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
                 <div class="stars">
@@ -771,20 +771,20 @@
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
+            <a href="#"> <i class="fas fa-phone"></i> 7875529670 </a>
             <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
+            <a href="#"> <i class="fas fa-envelope"></i> shivrankhamb@gmail.com </a>
             <img src="image/worldmap.png" class="map" alt="">
         </div>
         
     </div>
 
     <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-pinterest"></a>
+        <a href="https://www.facebook.com/login.php" class="fab fa-facebook-f"></a>
+        <a href="https://www.twitter.com/" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
+        <a href="https://www.pinterest.com/" class="fab fa-pinterest"></a>
     </div>
 
     <div class="credit"> | all rights reserved! </div>
