--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/me-3.jpg" alt="">
+                <img src="image/pic-1.jpg" alt="">
                 <h3>Shivprasad</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
                 <div class="stars">
@@ -591,7 +591,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/me.jpg" alt="">
+                <img src="image/pic-2.jpg" alt="">
                 <h3>john deo</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
                 <div class="stars">
